@@ -3547,8 +3547,6 @@ namespace {
 				}
 			}
 		}
-
-//		m_peer_pool.release_memory();
 	}
 
 	namespace {
